@@ -4,6 +4,7 @@ YYYY-MM-DD
 - Bug fixes / improvements
     - Fixed CMAKE_CXX_FLAGS overridind -std=gnu++0x (#489)
     - Missing versions update in CMake configuration (#490)
+    - Fix noding of self-intersecting lines through UnaryUnion (#482)
 
 Changes in 3.3.1
 2011-09-27
